# elevator-scheduler-cpp

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
src/: elevator.cpp  elevator.hpp  main.cpp
tests/: elevatorTestsMove.cpp
